# TinyRasterizer

./: .gitignore  CMakeLists.txt  README.md  main.cc
headers/: camera.h  geometry.hpp  model.h  ppm.hpp  utils.h
src/: camera.cc  model.cc  utils.cc
